Fix problem with tooltip not showing up as expected

--- a/web/src/main/resources/files/css/external/atooltip.css
+++ b/web/src/main/resources/files/css/external/atooltip.css
@@ -16,11 +16,21 @@
  */
 
 .aToolTip {
-	border:2px solid #444;
-	background:#555;
-	color:#fff;
-	margin:0;
-	padding:6px 12px;
+	background-color: #fff;
+	font-size: 14px;
+	text-align: center;
+	padding: 6px;
+	font-family: 'Lucida Grande', Tahoma, Arial, Verdana, sans-serif;
+	color: #333;
+	
+	border: 1px solid #aaa;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+	
+	-moz-box-shadow: 0 0 4px #000;
+	-webkit-box-shadow: 0 0 4px #000;
+	box-shadow: 0 0 4px #000;
 }
 
 .aToolTip .aToolTipContent {
